--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
           transform: rotate(10deg);
         }
       }
-
       .container.start .cpu_result {
         transform-origin: right;
         animation: cpuShake 0.7s ease infinite;
@@ -70,7 +69,6 @@
         color: green;
         margin-top: 1.5rem;
       }
-
       .option_image img {
         width: 50px;
       }
@@ -114,6 +112,7 @@
         transform: translateX(-50%);
         font-size: 0.8rem;
         color: #aaa;
+        text-align: center; /* Center the text */
       }
     </style>
   </head>
@@ -148,7 +147,7 @@
     </section>
 
     <!-- Centered Watermark -->
-    <div class="watermark">Created by Kanishk Raj</div>
+    <div class="watermark">Created by Prog. Kanishk Raj</div>
 
     <script>
       // Get DOM elements
